[project]
name = "Rubbergoddess"
version = "1.0"
description = "Discord bot for guild management"
license = "GPL-3.0-or-later"
readme = "README.md"
python = "^3.6"
homepage = "https://github.com/sinus-x/rubbergoddess"
repository = "https://github.com/sinus-x/rubbergoddess"

[tool.black]
target_version = ['py36']
line-length = 100
